fix grid on mobile

--- a/app/globals.css
+++ b/app/globals.css
@@ -9,6 +9,7 @@ body {
   background-color: #000;
   color: #fff;
   -webkit-font-smoothing: antialiased;
+  overflow-x: hidden;
 }
 
 ::-webkit-scrollbar {
